<resources>
    <string name="app_name">Garage</string>
    <string name="login">Login</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="logout">Logout</string>
</resources>