...
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight=".33"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_gravity="bottom"
            android:text="@string/logout"
            android:onClick="logout"
        />
...
